image and video more responsive

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -745,4 +745,24 @@
   .order-submit:hover {
     display: inline-block;
   }
+  
+  /* Estilos para contêineres de vídeo e imagem */
+  .video-container {
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  
+  .image-container {
+    max-width: 75%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  /* Media queries para responsividade */
+  @media (max-width: 768px) {
+    .video-container,
+    .image-container {
+      max-width: 100%;
+    }
+  }
 </style>
