--- a/app/views/activities/solve.html.erb
+++ b/app/views/activities/solve.html.erb
@@ -498,4 +498,24 @@
     align-items: center;
     margin-top: 20px;
   }
+  
+  /* Estilos para contêineres de vídeo e imagem */
+  .video-container {
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  
+  .image-container {
+    max-width: 75%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  /* Media queries para responsividade */
+  @media (max-width: 768px) {
+    .video-container,
+    .image-container {
+      max-width: 100%;
+    }
+  }
 </style> 
